force-app/main/default/objects/Round__c/Round__c.object-meta.xml
<CustomObject>
    <label>Round</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Round ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>