force-app/main/default/objects/Round__c/fields/Amount_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Amount_Ordered__c</fullName>
    <label>Amount Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>