force-app/main/default/objects/Round__c/fields/Incoming_Demand__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Demand__c</fullName>
    <label>Incoming Demand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>